--- a/views/game-lobby.handlebars
+++ b/views/game-lobby.handlebars
@@ -1,8 +1,8 @@
 
 Join the game!
 
-<form method="POST" action="/players">
-  <input type="text" placeholder="Your name" />
-  <input type="image" />
-  <input type="submit" />
+<form method="POST" action="/game/players">
+  Name: <input type="text" placeholder="Your name" /><br/>
+  Photo: <input type="image" /><br/>
+  <button type="submit">Join</button>
 </form>
