--- a/views/game-lobby.handlebars
+++ b/views/game-lobby.handlebars
@@ -1,7 +1,7 @@
 
 Join the game!
 
-<form method="POST" action="/game/players">
+<form method="POST" action="/players">
   Name: <input type="text" placeholder="Your name" /><br/>
   Photo: <input type="image" /><br/>
   <button type="submit">Join</button>
